cmake_minimum_required(VERSION 2.8.12)
project(time_tests)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror")
set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror")
set(SOURCE_FILES clock_gettime_res.c)
add_executable(clock_gettime_res clock_gettime_res.c)
add_executable(ptp_clock_check ptp_clock_check.c)
add_executable(udp_ping udp_ping.c)
add_executable(udp_pong udp_pong.c)
add_executable(lat_stor_test lat_stor_test.c utils.c)
add_executable(stat stat.cpp)

target_link_libraries(clock_gettime_res rt)
target_link_libraries(ptp_clock_check rt)
target_link_libraries(lat_stor_test rt m)